--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
             <div class="form-grid">
                 <div class="input-field">
                     <label> Username or Email </label>
-                    <input type="email" name="email" id="email" placeholder="Username or Email" required="">
+                    <input type="text" name="email" id="email" placeholder="Username or Email" required>
                 </div>
                 <div class="input-field">
                     <label> Password</label>
